--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Shi Chang</h1>
-            <p class="section__text__p2">Backend Developer</p>
+            <p class="section__text__p2">Software Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume-ShiChang.pdf')">
                     Download CV
@@ -91,7 +91,7 @@
                             class="icon"
                         />
                         <h3>Experience</h3>
-                        <p>2+ years <br>Backend Development</p>
+                        <p>3+ years <br>Software Development</p>
                     </div>
                     <div class="details-container">
                         <img 
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>I'm a passionate Backend Developer based in Penang, Malaysia. 
+                    <p>I'm a passionate Software Developer based in Penang, Malaysia. 
                        I enjoy working on every aspect of web development, from constructing web server logics, building algorithms, and managing data to design simple user interface.
                     </p>
                 </div>
